tests/ui/traits/const-traits/super-traits-fail-2.yy.stderr
error[E0277]: the trait bound `T: [const] Foo` is not satisfied
  --> $DIR/super-traits-fail-2.rs:20:7
   |
LL |     x.a();
   |       ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
